@@ -110,6 +110,11 @@ sub found {
     return @{ $self->_found };
 }
 
+sub find {
+    my $self = shift;
+    return grep { -f $_ } $self->_find_files;
+}
+
 sub _load_files {
     my $self = shift;
     my $files = shift;
